Simplify logic, delete useless code and update app

--- a/src/index.html
+++ b/src/index.html
@@ -27,4 +27,5 @@
   <body>
     <div id="app-container"></div>
   </body>
+  <audio class="sound rec" src="static/audio/chime.mp3"></audio>
 </html>
